<resources>
    <string name="app_name">KU-rum_front-end</string>

    <string name="my_page">마이페이지</string>
    <string name="profile_edit">프로필 편집</string>
    <string name="logout">로그아웃</string>
    <string name="my_friend">내 친구</string>
    <string name="more_friend">친구 찾기</string>
    <string name="policy">약관 및 정책</string>
    <string name="app_version">앱 버전</string>
    <string name="withdraw">회원 탈퇴</string>
    <string name="my_friend_hint">이름으로 친구를 검색하세요</string>
    <string name="more_friend_hint">닉네임을 입력해주세요</string>
    <string name="inform">알림</string>
    <string name="notice">공지사항</string>
    <string name="search_hint">검색어를 입력해주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>