<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_my_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/my_page"
        android:textColor="@color/basic_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_my_page_alarm"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_my_page_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="77dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.RoundedImageView"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <EditText
        android:id="@+id/et_my_page_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/siv_my_page_profile"
        app:layout_constraintStart_toStartOf="@id/siv_my_page_profile"
        app:layout_constraintTop_toBottomOf="@id/siv_my_page_profile" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_my_page_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/et_my_page_id"
        app:layout_constraintStart_toStartOf="@id/et_my_page_id"
        app:layout_constraintTop_toBottomOf="@id/et_my_page_id">

        <EditText
            android:id="@+id/et_my_page_college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:textColor="#9EAAB5"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_my_page_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:textColor="#9EAAB5"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_my_page_college" />

        <EditText
            android:id="@+id/et_my_page_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:textColor="#9EAAB5"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_my_page_major" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_my_page_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_my_page_detail">

        <Button
            android:id="@+id/btn_my_page_edit"
            style="@style/Widget.Ku_rum.RoundedRectangleButton"
            android:layout_width="152dp"
            android:layout_height="44dp"
            android:text="@string/profile_edit" />

        <Button
            android:id="@+id/btn_my_page_logout"
            style="@style/Widget.Ku_rum.RoundedRectangleButton"
            android:layout_width="152dp"
            android:layout_height="44dp"
            android:layout_marginStart="14dp"
            android:backgroundTint="#3BB765"
            android:text="@string/logout" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_my_page_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_my_page_button">

        <Button
            android:id="@+id/btn_my_page_my_friend"
            style="@style/Widget.Ku_rum.RectangleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/my_friend"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_my_page_more_friend"
            style="@style/Widget.Ku_rum.RectangleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/more_friend"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_my_page_policy"
            style="@style/Widget.Ku_rum.RectangleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/policy"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_my_page_app_version"
            style="@style/Widget.Ku_rum.RectangleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:gravity="start"
            android:text="@string/app_version"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_my_page_withdraw"
            style="@style/Widget.Ku_rum.RectangleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/withdraw"
            android:textColor="#F51C1C"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>